--- a/src/assets/setting.html
+++ b/src/assets/setting.html
@@ -4,11 +4,12 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>口袋小助手设置</title>
-  <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
+  <script src="https://cdn.staticfile.net/vue/2.7.16/vue.min.js"></script>
   <script src="ui.config.js"></script>
   <style>
     body {
       font-family: Arial, sans-serif;
+      /* font-size: 12px; */
     }
     .container {
       width: 90%;
@@ -22,7 +23,7 @@
     .tab {
       padding: 1rem;
       border: 1px solid #ccc;
-      margin-right: 1rem;
+      margin-right: 0;
     }
     .active {
       background-color: #009688;
@@ -38,7 +39,15 @@
     }
     .checkbox-group label,
     .input-group label {
-      margin-right: 1rem;
+      margin-left: 0.5em;
+    }
+    .short-input {
+      width: 3em;
+    }
+    .hunt-item-label {
+      display: inline-block;
+      width: 6.5em;  /* 根据最长的标签调整宽度 */
+      text-align: left;
     }
   </style>
 </head>
@@ -50,9 +59,13 @@
       </div>
     </div>
     <div class="content" v-if="currentTab === 0">
-      <h3>打野</h3>
+      <!-- <h3>打野</h3> -->
       <div class="checkbox-group">
-        <label><input type="checkbox" v-model="config.soloHunt.enabled" @change="saveConfig"> 单刷</label>
+        <span class="hunt-item-label">
+          <label><input type="checkbox" v-model="config.soloHunt.enabled" @change="saveConfig"> 单刷</label>
+        </span>
+        <label>次数</label>
+        <input type="number" class="short-input" v-model="config.soloHunt.times" @change="saveConfig">
         <label>编队</label>
         <select v-model="config.soloHunt.formationNum" @change="saveConfig">
           <option v-for="option in formationOptions" :key="option">{{ option }}</option>
@@ -61,23 +74,23 @@
         <select v-model="config.soloHunt.type" @change="saveConfig">
           <option v-for="option in soloHuntEnemyOptions" :key="option">{{ option }}</option>
         </select>
-      </div>
-      <div class="checkbox-group">
         <label>方式</label>
         <select v-model="config.soloHunt.attackType" @change="saveConfig">
           <option v-for="option in soloHuntAttackTypeOptions" :key="option">{{ option }}</option>
         </select>
-        <label>次数</label>
-        <input type="number" v-model="config.soloHunt.times" @change="saveConfig">
       </div>
       <hr>
       <div class="checkbox-group">
-        <label><input type="checkbox" v-model="config.rallyHunt.enabled" @change="saveConfig"> 集结</label>
+        <span class="hunt-item-label">
+          <label><input type="checkbox" v-model="config.rallyHunt.enabled" @change="saveConfig"> 集结</label>
+        </span>
       </div>
       <div class="checkbox-group" v-for="(item, key) in rallyHuntItems" :key="key">
-        <label><input type="checkbox" v-model="config.rallyHunt[key].enabled" @change="saveConfig"> {{ item.label }}</label>
+        <span class="hunt-item-label">
+          <label><input type="checkbox" v-model="config.rallyHunt[key].enabled" @change="saveConfig"> {{ item.label }}</label>
+        </span>
         <label>次数</label>
-        <input type="number" v-model="config.rallyHunt[key].times" @change="saveConfig">
+        <input type="number" class="short-input" v-model="config.rallyHunt[key].times" @change="saveConfig">
         <label>编队</label>
         <select v-model="config.rallyHunt[key].formationNum" @change="saveConfig">
           <option v-for="option in formationOptions" :key="option">{{ option }}</option>
@@ -85,22 +98,26 @@
       </div>
     </div>
     <div class="content" v-if="currentTab === 1">
-      <h3>跟车</h3>
+      <!-- <h3>跟车</h3> -->
       <div class="checkbox-group">
-        <label><input type="checkbox" v-model="config.getInBus.enabled" @change="saveConfig"> 开启跟车</label>
+        <span class="hunt-item-label">
+          <label><input type="checkbox" v-model="config.getInBus.enabled" @change="saveConfig"> 开启跟车</label>
+        </span>
         <label>编队</label>
         <select v-model="config.getInBus.formationNum" @change="saveConfig">
           <option v-for="option in formationOptions" :key="option">{{ option }}</option>
         </select>
       </div>
       <div class="checkbox-group" v-for="(item, key) in getInBusItems" :key="key">
-        <label><input type="checkbox" v-model="config.getInBus[key].enabled" @change="saveConfig"> {{ item.label }}</label>
+        <span class="hunt-item-label">
+          <label><input type="checkbox" v-model="config.getInBus[key].enabled" @change="saveConfig"> {{ item.label }}</label>
+        </span>
         <label>次数</label>
-        <input type="number" v-model="config.getInBus[key].times" @change="saveConfig">
+        <input type="number" class="short-input" v-model="config.getInBus[key].times" @change="saveConfig">
       </div>
     </div>
     <div class="content" v-if="currentTab === 2">
-      <h3>热门活动</h3>
+      <!-- <h3>热门活动</h3> -->
       <div class="checkbox-group">
         <label><input type="checkbox" v-model="config.events.oceanTreasure.enabled" @change="saveConfig"> 深海寻宝</label>
         <label>探测器数量</label>
@@ -110,7 +127,7 @@
       </div>
     </div>
     <div class="content" v-if="currentTab === 3">
-      <h3>日常</h3>
+      <!-- <h3>日常</h3> -->
       <div class="checkbox-group">
         <label><input type="checkbox" v-model="config.collectCoins" @change="saveConfig"> 领取金币</label>
       </div>
@@ -142,12 +159,12 @@
           this.currentTab = index;
         },
         saveConfig() {
-          localStorage.setItem('config', JSON.stringify(this.config));
+          Android.saveScriptConfig(JSON.stringify(this.config));
         },
         loadConfig() {
-          const savedConfig = localStorage.getItem('config');
-          if (savedConfig) {
-            this.config = JSON.parse(savedConfig);
+          const savedScriptConfig = Android.loadScriptConfig();
+          if (savedScriptConfig) {
+            this.config = JSON.parse(savedScriptConfig);
           }
         }
       },
